--- a/AccelerationStructures.vcxproj
+++ b/AccelerationStructures.vcxproj
@@ -129,11 +129,14 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="include\AABB.h" />
     <ClInclude Include="include\AccelerationStructure.h" />
+    <ClInclude Include="include\BruteForce.h" />
     <ClInclude Include="include\BVH.h" />
     <ClInclude Include="include\bvh_util.h" />
+    <ClInclude Include="include\env\Particle.h" />
+    <ClInclude Include="include\env\Primitive.h" />
     <ClInclude Include="include\Node.h" />
-    <ClInclude Include="include\Particle.h" />
-    <ClInclude Include="include\Primitive.h" />
+    <ClInclude Include="include\Ray.h" />
+    <ClInclude Include="include\env\Triangle.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
